@startuml

title __FAVOURITES's Class Diagram__\n

  namespace com.lilianortizcosta.virtwardrobe {
    namespace ui.favourites {
      class com.lilianortizcosta.virtwardrobe.ui.favourites.FavouritesFragment {
          - context : Context
          - db : SQLiteDatabase
          - rootLayout : LinearLayout
          - scrollView2 : ScrollView
          - textFavourites : TextView
          + loadCategoryData()
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.lilianortizcosta.virtwardrobe {
    namespace ui.favourites {
      class com.lilianortizcosta.virtwardrobe.ui.favourites.FavouritesHelper {
          + FavouriteChange()
          + FavouriteOnLoad()
      }
    }
  }
  

  com.lilianortizcosta.virtwardrobe.ui.favourites.FavouritesFragment -up-|> androidx.fragment.app.Fragment
  com.lilianortizcosta.virtwardrobe.ui.favourites.FavouritesFragment o-- com.lilianortizcosta.virtwardrobe.databinding.FragmentFavouritesBinding : binding


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
